--- a/main.html
+++ b/main.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main test</title>
+    <style>
+        body {
+            background-color: #000;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <div>
+            <img src="Group 224.svg" alt="">
+        </div>
+    </div>
 </body>
 </html>
