--- a/study/t_study/javascript/effectStudy/parallaxEffect07.html
+++ b/study/t_study/javascript/effectStudy/parallaxEffect07.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main id="main">
-        <div class="document">
+        <div class="document">hjk===
             <h2 class="t_tit">페럴랙스 이펙트 : 리빌 효과</h2>
             <p class="t_desc2">
                 이번에는 페럴랙스 이펙트 중에 리빌 효과를 넣는 방법을 코딩해봤습니다.
