--- a/javascript/effect/sliderEffect07.html
+++ b/javascript/effect/sliderEffect07.html
@@ -148,7 +148,7 @@
     <!-- header -->
     <header id="header">
         <h1>Javascript Slider Effect07</h1>
-        <p>슬라이드 이펙트 - 이미지 슬라이드(버튼, 닷메뉴, 무한, 플레이 버튼, 정비 버튼, 자동 플레이)</p>
+        <p>슬라이드 이펙트 - 이미지 슬라이드(버튼, 닷메뉴, 무한, 플레이 버튼, 정지 버튼, 자동 플레이)</p>
         <ul>
             <li><a href="sliderEffect01.html">1</a></li>
             <li><a href="sliderEffect02.html">2</a></li>
