--- a/study/t_study/javascript/effectStudy/sliderEffect05.html
+++ b/study/t_study/javascript/effectStudy/sliderEffect05.html
@@ -22,7 +22,7 @@
                 또한 스크립트를 짤 때, 그에 맞는 class 이름을 지정해주고 dot도 마찬가지로 형태로 진행하기 위해 html을 구성하였습니다.
             </p>
             <details>
-                <summary>코드 보기</summary>
+                <summary>HTML CODE</summary>
             <div class="t_code">
 <pre><code class="language.js">&lt;main id="main">
     &lt;section id="sliderType03">
@@ -60,7 +60,7 @@
                 dot에 스타일은 자기가 원하는 형태로 코드를 적용해주시면 됩니다.
             </p>
             <details>
-                <summary>코드 보기</summary>
+                <summary>CSS CODE</summary>
             <div class="t_code">
 <pre><code class="language.js">/* slider */
 .slider__wrap {
@@ -157,12 +157,12 @@
             </div>
         </details>
 
-            <h3 class="t_tit2">script</h3>
+            <h3 class="t_tit2">SCRIPT</h3>
             <p class="t_desc2">
                 스크립트는 기존에 있던 슬라이드 이펙트04와 살짝 비슷한 형태이지만, dot에 스크립트를 적용하기 위해 새로운 구성으로 추가 해줬습니다.
             </p>
             <details>
-                <summary>코드 보기</summary>
+                <summary>SCRIPT CODE</summary>
             <div class="t_code">
 <pre><code class="language-js">const sliderWrap = document.querySelector(".slider__wrap");
 const sliderImg = document.querySelector(".slider__img");               // 보여지는 영역
