--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   <span class="overlay-text-thumb1-donut">클래스</span>
                   <span class="overlay-text-thumb2-donut">CLASS</span>
                 </div>
-                <img src="assets/img/svg-donut.svg" alt="portfolio">
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>CLASS</h5>
                   <p>클래스</p>
@@ -171,7 +171,7 @@
                   <span class="overlay-text-thumb1-donut">자바스크립트</span>
                   <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
                 </div>
-                <img src="assets/img/svg-pizza.svg" alt="portfolio">
+                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>JAVASCRIPT</h5>
                   <p>자바스크립트</p>
@@ -184,7 +184,7 @@
 
           <!-- box html -->
           <section class="color-shape reference">
-            <a href="html/index.html" target="_blank">
+            <a href="html/alphabet.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">HTML</span>
@@ -192,7 +192,7 @@
                   <span class="overlay-text-thumb1-donut">HTML</span>
                   <span class="overlay-text-thumb2-donut">HTML</span>
                 </div>
-                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
+                <img src="assets/img/svg-carrot.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>HTML</h5>
                   <p>HTML</p>
@@ -213,7 +213,7 @@
                   <span class="overlay-text-thumb1-donut">CSS</span>
                   <span class="overlay-text-thumb2-donut">CSS</span>
                 </div>
-                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>CSS</h5>
                   <p>CSS</p>
@@ -224,30 +224,9 @@
           </section>
           <!-- //box css -->
 
-          <!-- box css -->
+          <!-- box SITE -->
           <section class="color-shape reference">
-            <a href="css/index.html" target="_blank">
-              <div class="image-wrap">
-                <div class="hover-wrap">
-                  <span class="overlay-img-donut">LAYOUT</span>
-                  <span class="overlay-text-thumb-donut">LAYOUT</span>
-                  <span class="overlay-text-thumb1-donut">LAYOUT</span>
-                  <span class="overlay-text-thumb2-donut">LAYOUT</span>
-                </div>
-                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
-                <div class="img-text donutImg">
-                  <h5>LAYOUT</h5>
-                  <p>LAYOUT</p>
-                  <span>LAYOUT</span>
-                </div>
-              </div>
-            </a>
-          </section>
-          <!-- //box css -->
-
-          <!-- box css -->
-          <section class="color-shape reference">
-            <a href="site/site1/index.html" target="_blank">
+            <a href="site/site1_res/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SITE</span>
@@ -264,23 +243,65 @@
               </div>
             </a>
           </section>
-          <!-- //box css -->
+          <!-- //box SITE -->
+
+          <!-- box SITE2 -->
+          <section class="color-shape reference">
+            <a href="site/site2/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE2</span>
+                  <span class="overlay-text-thumb-donut">SITE2</span>
+                  <span class="overlay-text-thumb1-donut">사이트2 제작하기</span>
+                  <span class="overlay-text-thumb2-donut">SITE2</span>
+                </div>
+                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>SITE2</h5>
+                  <p>사이트2 제작하기</p>
+                  <span>SITE2</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box SITE2 -->
+
+          <!-- box SITE3 -->
+          <section class="color-shape reference">
+            <a href="site/site2/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE3</span>
+                  <span class="overlay-text-thumb-donut">SITE3</span>
+                  <span class="overlay-text-thumb1-donut">사이트3 제작하기</span>
+                  <span class="overlay-text-thumb2-donut">PHP</span>
+                </div>
+                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>SITE3</h5>
+                  <p>사이트3 제작하기</p>
+                  <span>SITE3</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box SITE3 -->
 
           <!-- box SEARCH -->
           <section class="color-shape script">
             <a href="javascript/effect/searchEffect.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-img-donut">SEARCH</span>
                   <span class="overlay-text-thumb-donut">SEARCH</span>
                   <span class="overlay-text-thumb1-donut">검색 효과</span>
-                  <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb2-donut">SEARCH</span>
                 </div>
                 <img src="assets/img/svg-cookie.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SEARCH</h5>
                   <p>검색 효과</p>
-                  <span>JAVASCRIPT</span>
+                  <span>SEARCH</span>
                 </div>
               </div>
             </a>
@@ -313,7 +334,7 @@
             <a href="javascript/effect/dataEffect.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-img-donut">DATA</span>
                   <span class="overlay-text-thumb-donut">DATA</span>
                   <span class="overlay-text-thumb1-donut">데이터 효과</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
@@ -322,7 +343,7 @@
                 <div class="img-text donutImg">
                   <h5>DATA</h5>
                   <p>데이터 효과</p>
-                  <span>SITE</span>
+                  <span>DATA</span>
                 </div>
               </div>
             </a>
@@ -334,16 +355,16 @@
             <a href="javascript/effect/mouseEffect.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-img-donut">MOUSE</span>
                   <span class="overlay-text-thumb-donut">MOUSE</span>
                   <span class="overlay-text-thumb1-donut">마우스 효과</span>
-                  <span class="overlay-text-thumb2-donut">SITE</span>
+                  <span class="overlay-text-thumb2-donut">MOUSE</span>
                 </div>
                 <img src="assets/img/svg-fried-chicken.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>MOUSE</h5>
                   <p>마우스 효과</p>
-                  <span>SITE</span>
+                  <span>MOUSE</span>
                 </div>
               </div>
             </a>
@@ -355,16 +376,16 @@
             <a href="javascript/effect/sliderEffect.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-img-donut">SLIDER</span>
                   <span class="overlay-text-thumb-donut">SLIDER</span>
                   <span class="overlay-text-thumb1-donut">슬라이드 효과</span>
-                  <span class="overlay-text-thumb2-donut">SITE</span>
+                  <span class="overlay-text-thumb2-donut">SLIDER</span>
                 </div>
                 <img src="assets/img/svg-grapes.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SLIDER</h5>
                   <p>슬라이드 효과</p>
-                  <span>SITE</span>
+                  <span>SLIDER</span>
                 </div>
               </div>
             </a>
@@ -376,16 +397,16 @@
             <a href="javascript/effect/parallaxEffect.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-img-donut">PARALLAX</span>
                   <span class="overlay-text-thumb-donut">PARALLAX</span>
                   <span class="overlay-text-thumb1-donut">패럴랙스 효과</span>
-                  <span class="overlay-text-thumb2-donut">SITE</span>
+                  <span class="overlay-text-thumb2-donut">PARALLAX</span>
                 </div>
                 <img src="assets/img/svg-hotdog.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>PARALLAX</h5>
                   <p>패럴랙스 효과</p>
-                  <span>SITE</span>
+                  <span>PARALLAX</span>
                 </div>
               </div>
             </a>
@@ -397,16 +418,16 @@
             <a href="javascript/effect/gameEffect.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-img-donut">GAME</span>
                   <span class="overlay-text-thumb-donut">GAME</span>
                   <span class="overlay-text-thumb1-donut">게임 효과</span>
-                  <span class="overlay-text-thumb2-donut">SITE</span>
+                  <span class="overlay-text-thumb2-donut">GAME</span>
                 </div>
                 <img src="assets/img/svg-ice-cupcake.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>GAME</h5>
                   <p>게임 효과</p>
-                  <span>SITE</span>
+                  <span>GAME</span>
                 </div>
               </div>
             </a>
@@ -475,90 +496,6 @@
             </a>
           </section>
           <!-- //box MySQL -->
-
-          <!-- box PHP STUDY -->
-          <section class="color-shape animation">
-            <a href="#" target="_blank">
-              <div class="image-wrap">
-                <div class="hover-wrap">
-                  <span class="overlay-img-donut">PHP STUDY</span>
-                  <span class="overlay-text-thumb-donut">PHP STUDY</span>
-                  <span class="overlay-text-thumb1-donut">PHP STUDY</span>
-                  <span class="overlay-text-thumb2-donut">PHP STUDY</span>
-                </div>
-                <img src="assets/img/svg-popcorn.svg" alt="portfolio">
-                <div class="img-text donutImg">
-                  <h5>PHP STUDY</h5>
-                  <p>PHP STUDY</p>
-                  <span>PHP STUDY</span>
-                </div>
-              </div>
-            </a>
-          </section>
-          <!-- //box PHP STUDY -->
-
-          <!-- box PHP STUDY GITHUB -->
-          <section class="color-shape animation">
-            <a href="https://github.com/KDB6/php" target="_blank">
-              <div class="image-wrap">
-                <div class="hover-wrap">
-                  <span class="overlay-img-donut">PHP STUDY GITHUB</span>
-                  <span class="overlay-text-thumb-donut">PHP STUDY GITHUB</span>
-                  <span class="overlay-text-thumb1-donut">PHP STUDY GITHUB</span>
-                  <span class="overlay-text-thumb2-donut">PHP STUDY GITHUB</span>
-                </div>
-                <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
-                <div class="img-text donutImg">
-                  <h5>PHP STUDY GITHUB</h5>
-                  <p>PHP STUDY GITHUB</p>
-                  <span>PHP STUDY GITHUB</span>
-                </div>
-              </div>
-            </a>
-          </section>
-          <!-- //box PHP STUDY GITHUB -->
-
-          <!-- box PHP PROJECT -->
-          <section class="color-shape animation">
-            <a href="http://ipkg72102.dothome.co.kr/project/index.html" target="_blank">
-              <div class="image-wrap">
-                <div class="hover-wrap">
-                  <span class="overlay-img-donut">PHP PROJECT</span>
-                  <span class="overlay-text-thumb-donut">PHP PROJECT</span>
-                  <span class="overlay-text-thumb1-donut">PHP PROJECT</span>
-                  <span class="overlay-text-thumb2-donut">PHP PROJECT</span>
-                </div>
-                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
-                <div class="img-text donutImg">
-                  <h5>PHP PROJECT</h5>
-                  <p>PHP PROJECT</p>
-                  <span>PHP PROJECT</span>
-                </div>
-              </div>
-            </a>
-          </section>
-          <!-- //box PHP PROJECT -->
-
-          <!-- box PHP PROJECT GITHUB -->
-          <section class="color-shape animation">
-            <a href="https://github.com/KDB6/ck/tree/main/project" target="_blank">
-              <div class="image-wrap">
-                <div class="hover-wrap">
-                  <span class="overlay-img-donut">PHP PROJECT GITHUB</span>
-                  <span class="overlay-text-thumb-donut">PHP PROJECT GITHUB</span>
-                  <span class="overlay-text-thumb1-donut">PHP PROJECT GITHUB</span>
-                  <span class="overlay-text-thumb2-donut">PHP PROJECT GITHUB</span>
-                </div>
-                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
-                <div class="img-text donutImg">
-                  <h5>PHP PROJECT GITHUB</h5>
-                  <p>PHP PROJECT GITHUB</p>
-                  <span>PHP PROJECT GITHUB</span>
-                </div>
-              </div>
-            </a>
-          </section>
-          <!-- //box PHP PROJECT -->
           
         </div>
         <!-- //container-->
