--- a/css/index.html
+++ b/css/index.html
@@ -860,6 +860,18 @@
                 filter: url("#filterSquiggle4");
             }
         }
+        .main__desc {
+            margin-top: 100px;
+        }
+        .main__title {
+            display: none;
+        }
+        .subContents > div {
+            display: none;
+        }
+        .subContents > div.active {
+            display: block;
+        }
     </style>
 </head>
 
@@ -991,7 +1003,6 @@
                     <ul>
                         <li class="active"><a href="#">Alphabet</a></li>
                         <li><a href="#">Selector</a></li>
-                        <li><a href="#">Flex</a></li>
                     </ul>
                 </div>
                 
@@ -999,7 +1010,7 @@
                 <div class="subContents">
 
                     <!-- subCont1 -->
-                    <div class="subCont1">
+                    <div class="subCont1 active">
                         <div class="table">
                             <table>
                                 <colgroup>
@@ -6139,7 +6150,7 @@
                     </div>
 
                     <!-- subCont2 -->
-                    <div class="subCont2">
+                    <div class="subCont2 acitve">
                             <div class="table">
                                 <div class="rowTable">
                                     <table>
@@ -6713,51 +6724,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- subCont3 -->
-                    <!-- <div class="subCont3">
-                        <div>
-                            <div class="table">
-                                <table>
-                                    <colgroup>
-                                        <col style="width: 5%;">
-                                        <col style="width: 20%;">
-                                        <col>
-                                        <col style="width: 11%;">
-                                        <col style="width: 5%;">
-                                        <col style="width: 5%;">
-                                    </colgroup>
-                                    <thead>
-                                        <tr>
-                                            <th>번호</th>
-                                            <th>속성</th>
-                                            <th>설명</th>
-                                            <th>중요</th>
-                                            <th>보기</th>
-                                            <th>비고</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>01</td>
-                                            <td>accent-color</td>
-                                            <td>accent-color태그는 href특성을 통해 다른 페이지나 같은페이지의 위치, 파일와 그 외 다른 URL로 연결할 수 있는 하이퍼
-                                                링크를 만듭니다.</td>
-                                            <td>
-                                                <span class="material-symbols-outlined">star</span>
-                                                <span class="material-symbols-outlined">grade</span>
-                                                <span class="material-symbols-outlined">grade</span>
-                                                <span class="material-symbols-outlined">grade</span>
-                                                <span class="material-symbols-outlined">grade</span>
-                                            </td>
-                                            <td><a href="#">__</a></td>
-                                            <td></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
                 <!-- //subContents -->
             </div>
