--- a/javascript/effect/sliderEffect.html
+++ b/javascript/effect/sliderEffect.html
@@ -1,61 +1,78 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>슬라이드 이펙트</title>
-    
+    <title>Slider Effect</title>
+
+    <link rel="stylesheet" href="../assets/css/dracula.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <style>
-        body,
-        html,
-        #app {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-        }
-        .intro_menu {
-            z-index: 10000;
-            background: rgba(255, 255, 255, 0.1);
-        }
-    </style>
 </head>
+
 <body>
-    <main>
-        <div class="intro_menu">
+    <header id="header">
+        <h1><a href="../index.html">Slider Effect</a></h1>
+        <nav class="header_nav">
             <ul>
-                <li>01. 슬라이드 이펙트 : 트랜지션 효과<a href="sliderEffect01.html">GO</a></li>
-                <li>02. 슬라이드 이펙트 : 좌로 움직이기<a href="sliderEffect02.html">GO</a></li>
-                <li>03. 슬라이드 이펙트 : 좌로 움직이기(연속적으로)<a href="sliderEffect03.html">GO</a></li>
-                <li>03. 슬라이드 이펙트 : 이미지 슬라이드(버튼)<a href="sliderEffect04.html">GO</a></li>
-                <li>03. 슬라이드 이펙트 : 이미지 슬라이드(버튼, 닷메뉴)<a href="sliderEffect05.html">GO</a></li>
-                <li>03. 슬라이드 이펙트 : 이미지 슬라이드(버튼, 닷메뉴, 무한)<a href="sliderEffect06.html">GO</a></li>
-                <li>03. 슬라이드 이펙트 : 이미지 슬라이드(버튼, 닷메뉴, 무한, 플레이 버튼, 정비 버튼, 자동 플레이)<a href="sliderEffect07.html">GO</a></li>
+                <li><a href="../javascript01.html">데이터 저장하기</a></li>
+                <li><a href="../javascript02.html">데이터 불러오기</a></li>
+                <li><a href="../javascript03.html">데이터 실행하기</a></li>
+                <li><a href="../javascript04.html">데이터 제어하기</a></li>
             </ul>
+            <ul>
+                <li><a href="../javascript05.html">문자열 객체</a></li>
+                <li><a href="../javascript06.html">배열 객체</a></li>
+                <li><a href="../javascript07.html">수학 객체</a></li>
+                <li><a href="../javascript08.html">숫자 객체</a></li>
+                <li><a href="../javascript09.html">브라우저 객체</a></li>
+                <li><a href="../javascript10.html">요소 객체</a></li>
+                <li><a href="../javascript11.html">이벤트 객체</a></li>
+                <li><a href="../javascript12.html">제이쿼리</a></li>
+            </ul>
+            <ul class="effect">
+                <li><a href="../effect/searchEffect.html">검색 효과</a></li>
+                <li><a href="../effect/quizEffect.html">퀴즈 효과</a></li>
+                <li><a href="../effect/dataEffect.html">데이터 효과</a></li>
+                <li><a href="../effect/mouseEffect.html">마우스 효과</a></li>
+                <li class="active"><a href="../effect/sliderEffect.html">슬라이드 효과</a></li>
+                <li><a href="../effect/parallaxEffect.html">페랠랙스 효과</a></li>
+                <li><a href="../effect/gameEffect.html">게임 효과</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- //header -->
+    <main id="main">
+        <div class="container">
+            <div class="main_menu">
+                <ul>
+                    <li>01. 마우스 이펙트 : 마우스 따라다니기<a href="mouseEffect01.html"> view</a></li>
+                    <li>02. 마우스 이펙트 : 마우스 따라다니기(GSAP)<a href="mouseEffect02.html"> view</a></li>
+                    <li>03. 마우스 이펙트 : 조명 효과<a href="mouseEffect03.html"> view</a></li>
+                    <li>04. 마우스 이펙트 : 이미지 효과<a href="mouseEffect04.html"> view</a></li>
+                    <li>05. 마우스 이펙트 : 기울기 효과 / 글씨 반전 효과<a href="mouseEffect05.html"> view</a></li>
+                    <li>06. 마우스 이펙트 : 텍스트 효과<a href="mouseEffect06.html"> view</a></li>
+                    <li>07. 마우스 이펙트 : 텍스트 효과<a href="mouseEffect06.html"> view</a></li>
+                </ul>
+            </div>
+            <div class="main_sample">
+
+            </div>
         </div>
     </main>
+    <!-- //main -->
 
-    <div id="app"></div>
+    <footer id="footer">
+        <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
+    </footer>
+    <!-- //footer -->
 
-    <script type="module">
-        import {
-            neonCursor
-        } from 'https://unpkg.com/threejs-toys@0.0.2/build/threejs-toys.module.cdn.min.js'
-        neonCursor({
-            el: document.getElementById('app'),
-            shaderPoints: 16,
-            curvePoints: 80,
-            curveLerp: 0.5,
-            radius1: 5,
-            radius2: 30,
-            velocityTreshold: 10,
-            sleepRadiusX: 100,
-            sleepRadiusY: 100,
-            sleepTimeCoefX: 0.0025,
-            sleepTimeCoefY: 0.0025
-        })
+    <script src="assets/js/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
+
+    <script>
     </script>
 </body>
+
 </html>
