--- a/javascript/effect/sliderEffect.html
+++ b/javascript/effect/sliderEffect.html
@@ -47,13 +47,13 @@
         <div class="container">
             <div class="main_menu">
                 <ul>
-                    <li>01. 마우스 이펙트 : 마우스 따라다니기<a href="mouseEffect01.html"> view</a></li>
-                    <li>02. 마우스 이펙트 : 마우스 따라다니기(GSAP)<a href="mouseEffect02.html"> view</a></li>
-                    <li>03. 마우스 이펙트 : 조명 효과<a href="mouseEffect03.html"> view</a></li>
-                    <li>04. 마우스 이펙트 : 이미지 효과<a href="mouseEffect04.html"> view</a></li>
-                    <li>05. 마우스 이펙트 : 기울기 효과 / 글씨 반전 효과<a href="mouseEffect05.html"> view</a></li>
-                    <li>06. 마우스 이펙트 : 텍스트 효과<a href="mouseEffect06.html"> view</a></li>
-                    <li>07. 마우스 이펙트 : 텍스트 효과<a href="mouseEffect06.html"> view</a></li>
+                    <li>01. 슬라이드 이펙트 : 트랜지션 효과<a href="sliderEffect01.html"> view</a></li>
+                    <li>02. 슬라이드 이펙트 : 좌로 움직이기<a href="sliderEffect02.html"> view</a></li>
+                    <li>03. 슬라이드 이펙트 : 좌로 움직이기(연속적으로)<a href="sliderEffect03.html"> view</a></li>
+                    <li>04. 슬라이드 이펙트 : 이미지 슬라이드(버튼)<a href="sliderEffect04.html"> view</a></li>
+                    <li>05. 슬라이드 이펙트 : 이미지 슬라이드(버튼, 닷메뉴)<a href="sliderEffect05.html"> view</a></li>
+                    <li>06. 슬라이드 이펙트 : 이미지 슬라이드(버튼, 닷메뉴, 무한)<a href="sliderEffect06.html"> view</a></li>
+                    <li>07. 슬라이드 이펙트 : 이미지 슬라이드(버튼, 닷메뉴, 무한, 플레이 버튼, 정지 버튼, 자동 플레이)<a href="sliderEffect07.html"> view</a></li>
                 </ul>
             </div>
             <div class="main_sample">
