--- a/javascript/effect/searchEffect.html
+++ b/javascript/effect/searchEffect.html
@@ -47,13 +47,13 @@
         <div class="container">
             <div class="main_menu">
                 <ul>
-                    <li>01. 서치 이펙트 : indexOf()<a href="searchEffect01.html"> view</a></li>
-                    <li>02. 서치 이펙트 : inCludes()<a href="searchEffect02.html"> view</a></li>
-                    <li>03. 서치 이펙트 : charAt()<a href="searchEffect03.html"> view</a></li>
-                    <li>04. 서치 이펙트 : find()<a href="searchEffect04.html"> view</a></li>
-                    <li>05. 서치 이펙트 : filter()<a href="searchEffect05.html"> view</a></li>
-                    <li>06. 서치 이펙트 : sort(), reverse()<a href="searchEffect06.html"> view</a></li>
-                    <li>07. 서치 이펙트 : 피셔 에이츠 알고리즘 이용하여 정렬하기<a href="searchEffect07.html"> view</a></li>
+                    <li>01. 검색 이펙트 : indexOf()<a href="searchEffect01.html"> view</a></li>
+                    <li>02. 검색 이펙트 : inCludes()<a href="searchEffect02.html"> view</a></li>
+                    <li>03. 검색 이펙트 : charAt()<a href="searchEffect03.html"> view</a></li>
+                    <li>04. 검색 이펙트 : find()<a href="searchEffect04.html"> view</a></li>
+                    <li>05. 검색 이펙트 : filter()<a href="searchEffect05.html"> view</a></li>
+                    <li>06. 검색 이펙트 : sort(), reverse()<a href="searchEffect06.html"> view</a></li>
+                    <li>07. 검색 이펙트 : 피셔 에이츠 알고리즘 이용하여 정렬하기<a href="searchEffect07.html"> view</a></li>
                 </ul>
             </div>
             <div class="main_sample">
